# Mr.Jack

./: README.md
Mr.Jack/: CMakeLists.txt  main.c
Mr.Jack/audio/: audio.c
Mr.Jack/characters/: InspecteurLestrade.c  JermyBert.c  JohnSmith.c  JohnWatson.c  MissStealthy.c  SergentGoodley.c  SherlockHolmes.c  SirWilliamGull.c  characters.c  characters.h  inner_characters.h
Mr.Jack/gameplay/: MrJack_Gameplay.c  MrJack_Gameplay.h
Mr.Jack/graphic/: GUI_init.c  GUI_init.h  MrJack_Map.c  MrJack_Map.h
Mr.Jack/linked_list/: linked_list.c  linked_list.h
Mr.Jack/pages/: start_game.c  start_jack.c  start_map.c  starter.c  starter.h
src/: CMakeLists.txt  main.c
src/audio/: audio.c
src/characters/: InspecteurLestrade.c  JermyBert.c  JohnSmith.c  JohnWatson.c  MissStealthy.c  SergentGoodley.c  SherlockHolmes.c  SirWilliamGull.c  characters.c  characters.h  inner_characters.h
src/gameplay/: MrJack_Gameplay.c  MrJack_Gameplay.h
src/graphic/: GUI_gravity.h  GUI_init.c  GUI_init.h  MrJack_Map.c  MrJack_Map.h
src/linked_list/: linked_list.h
src/pages/: start_game.c  start_jack.c  start_map.c  starter.c  starter.h
